added wording to about me

--- a/about-me.html
+++ b/about-me.html
@@ -14,7 +14,7 @@
         </ul>
 
         <h4>
-            I'm Marcin Salamon, a rice enthusiast and innovator. This webpage is a list of my favorite methods of making rice and one for the boring people.
+            I'm Marcin Salamon, a rice enthusiast and innovator. This webpage is a list of my favorite methods of making rice and one for the boring people. Some recipes require wine.
         </h4>
     </body>
 </html>
